deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${deploymentName}
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ${labelName}
  template:
    metadata:
      labels:
        app: ${labelName}
    spec:
      containers:
      - name: ${containerName}
        image: ${imageName}
        ports:
        - containerPort: 80
