mysql-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mysql-ns

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: mysql-ns
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "until mysqladmin ping -h 127.0.0.1 --silent; do sleep 5; done && \
                                      mysql -u root -p${MYSQL_ROOT_PASSWORD} -e \"
                                      CREATE DATABASE IF NOT EXISTS ${MYSQL_DATABASE};
                                      CREATE USER IF NOT EXISTS '${MYSQL_USER}'@'%' IDENTIFIED BY '${MYSQL_PASSWORD}';
                                      GRANT ALL PRIVILEGES ON ${MYSQL_DATABASE}.* TO '${MYSQL_USER}'@'%';
                                      FLUSH PRIVILEGES;\""]
