mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: mysql-ns
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql
