nginx-controller.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx

---


apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app: ingress-nginx
  externalIPs: ["35.195.195.105"]
