ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-wp-ingress
  namespace: ${namespaceName}
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ${webAddress}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache-wp-svc
            port:
              number: ${svcPort}
